--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^10.16.1",
     "papaparse": "^5.5.2",
     "react": "^18.2.0",
